# rust_sqs

./: .gitignore  Cargo.toml  Makefile  README.md  deploy.sh  template.yml
src/: lib.rs  main.rs
src/aws/: client.rs
src/dtos/: request.rs
src/errors/: error.rs
src/models/: product.rs
src/queries/: add_product_query.rs  get_product_by_id_query.rs  mod.rs
