[package]
name = "rust-sqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# APP
[[bin]]
name = "handler"
path = "src/bin/lambda/handler.rs"

[dependencies]
lambda_runtime = "0.4.1"
aws-config = "0.3.0"
aws-sdk-dynamodb = "0.3.0"
aws-sdk-sqs = "0.3.0"
aws-types = "0.3.0"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.68"
simple_logger = "1.13.0"
tokio = "1.12.0"
async-trait = "0.1.51"
aws_lambda_events = "0.5.0"
futures = "0.3.17"
uuid = { version = "0.8", features = ["v4"] }
